# ecommerce

./: .env.example  .gitignore  Cargo.toml  config.example.toml  config.toml  diesel.toml
migrations/2024-09-27-094547_create_customer/: up.sql
migrations/2024-09-27-094701_create_order/: up.sql
migrations/2024-09-30-072407_add_product_id_in_order/: up.sql
migrations/2024-09-30-073603_products/: up.sql
migrations/2024-09-30-074028_add_reference_to_product_id_in_order/: up.sql
migrations/2024-09-30-082230_change_nullanblr_to_not_null/: up.sql
migrations/2024-09-30-105428_admin/: up.sql
migrations/2024-10-06-130751_order_status_as_enum/: up.sql
src/: authentication.rs  db.rs  db_models.rs  lib.rs  main.rs  middleware.rs  schema.rs  session_state.rs  startup.rs  telemetry.rs
src/Errors/: custom.rs
src/auth_jwt/: auth.rs
src/config/: configuration.rs
src/routes/: health_check.rs  mod.rs
src/routes/admin/: admin.rs  admin_error.rs  mod.rs  validate_admin.rs
src/routes/customer/: customer.rs  customer_error.rs  mod.rs  validate_customer.rs
src/routes/order/: mod.rs  order.rs  order_error.rs
src/routes/products/: seed.rs
src/validations/: customer.rs  mod.rs  name_email.rs
tests/api/: admin.rs  customer.rs  health_check.rs  helper.rs  main.rs  order.rs
